# khulnasoft-lab-_-ai-assist

./: .dockerignore  .gitignore  .gitlab-ci.yml  .markdownlint-cli2.yaml  .releaserc.yml  .tool-versions  Dangerfile  Dockerfile  Gemfile  Makefile  README.md  conftest.py  docker-compose.dev.yaml  example.env  lefthook.yaml  lefthook.yml  prettyprint.py  pyproject.toml  renovate.json  requirements.txt  setup.cfg
.gitlab/: CODEOWNERS
.gitlab/ci/: build.gitlab-ci.yml  ingest.gitlab-ci.yml  lint.gitlab-ci.yml  release.gitlab-ci.yml
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: Default.md
.runway/: env-production.yml  env-staging.yml  runway-staging.yml  runway.yml
.runway/ai-gateway-custom/: env-production.yml  env-staging.yml  runway.yml
ai_gateway/: __init__.py  app.py  async_dependency_resolver.py  config.py  container.py  deps.py  gitlab_features.py  main.py  profiling.py  structured_logging.py  tokenizer.py  typing.py
ai_gateway/abuse_detection/: __init__.py  container.py  detector.py
ai_gateway/agents/: __init__.py  base.py  container.py  instrumentator.py  registry.py  typing.py
ai_gateway/api/: __init__.py  auth_utils.py  error_utils.py  feature_category.py  middleware.py  monitoring.py  server.py  snowplow_context.py
ai_gateway/auth/: __init__.py  authentication.py  cache.py  container.py  gcp.py  glgo.py  providers.py  request.py  user.py
ai_gateway/chat/: __init__.py  base.py  container.py  executor.py  toolset.py  typing.py
ai_gateway/cloud_connector/: __init__.py  auth.py  cache.py  config.py  gitlab_features.py  logging.py  providers.py  token_authority.py  user.py  validators.py
ai_gateway/code_suggestions/: __init__.py  base.py  code.py  completions.py  container.py  detectors.py  experimental.py  generations.py  language_server.py  mixins.py
ai_gateway/experimentation/: __init__.py  base.py  provider.py
ai_gateway/feature_flags/: __init__.py  context.py
ai_gateway/instrumentators/: __init__.py  base.py  benchmark.py  model_requests.py  threads.py
ai_gateway/integrations/: container.py
ai_gateway/internal_events/: __init__.py  client.py  container.py  context.py
ai_gateway/models/: __init__.py  agent_model.py  anthropic.py  base.py  base_chat.py  base_text.py  chat_model_base.py  container.py  fake.py  litellm.py  mock.py  openai_compatible.py  palm.py  vertex_text.py
ai_gateway/prompts/: __init__.py  base.py  container.py  instrumentator.py  prompt.py  registry.py  typing.py
ai_gateway/scripts/: index_docs_as_sqlite.py  troubleshoot_selfhosted_installation.py
ai_gateway/searches/: __init__.py  container.py  search.py  sqlite_search.py
ai_gateway/self_signed_jwt/: __init__.py  container.py  token_authority.py
ai_gateway/self_signed_token/: __init__.py  token_authority.py
ai_gateway/suggestions/: __init__.py  code.py  experimental.py  mixins.py
ai_gateway/tracking/: __init__.py  container.py  errors.py  instrumentator.py  snowplow.py
ai_gateway/x_ray/: __init__.py  container.py
api/: Dockerfile  app.py  models.py  requirements.txt
api/config/: config.py
api/utils/: cache.py  gitlab.py
autograph/: __init__.py
autograph/agents/: __init__.py  agent.py  handover.py  planning.py
autograph/entities/: __init__.py  config.py  plan.py  state.py
ci/: gitlab-com.yml  ops-gitlab-net.yml
codesuggestions/: __init__.py  app.py  config.py  deps.py  profiling.py  structured_logging.py  tokenizer.py
codesuggestions/_assets/: __init__.py
codesuggestions/api/: __init__.py  http.py  middleware.py  monitoring.py  server.py  suggestions.py  timing.py
codesuggestions/auth/: __init__.py  cache.py  providers.py  user.py
codesuggestions/experimentation/: __init__.py  base.py  provider.py
codesuggestions/instrumentators/: __init__.py  base.py
codesuggestions/models/: __init__.py  base.py  codegen.py  fake.py  instrumentators.py  monitoring.py  palm.py
codesuggestions/prompts/: __init__.py  base.py  code_parser.py  import_extractor.py  prompt.py
codesuggestions/suggestions/: __init__.py  base.py  code.py  detectors.py  experimental.py  mixins.py  prompt.py
codesuggestions/tracking/: __init__.py  instrumentator.py  snowplow.py
config/events/: request_code_suggestions.yml  request_documentation_search.yml  request_duo_chat.yml  request_explain_vulnerability.yml  request_resolve_vulnerability.yml
converter/: codegen_gptj_convert.py  download_and_convert_model.sh  huggingface_gptj_convert.py  triton_config_gen.py
danger/maintainer_roulette/: Dangerfile
danger/roulette/: Dangerfile
docker/self_hosted/: Dockerfile
docs/: aigw_prompt_registry.md  api.md  application_settings.md  architecture.md  auth.md  connect_to_gcp_in_ci.md  duo_chat.md  feature_flags.md  inference_limits.md  internal_events.md  kubernetes.md  maintainership.md  operations.md  performance_testing.md  release.md  search.md  tests.md  vscode.md
docs/assets/: test.json
infrastructure/: compare-deployed.sh  helmfile-runner.yaml  helmfile.yaml  render.sh
infrastructure/ai-assist/: Chart.yaml  values.yaml
infrastructure/dashboards/: triton_server.json
infrastructure/scripts/: deploy  helm-deploy.sh  identity-setup.sh  load-model.sh
integration_tests/: test_application_setting.py  test_code_suggestions.py  utils.py
lints/: direct_environment_variable_reference.py  unsafe_dependency_resolution.py
manifests/: model-api.yaml  model-loader.yaml  model-nfs-server.yaml  model-persistense-volumes.yaml  model-serving.yaml  model-triton.yaml  triton-inference.yaml
manifests/cert-manager/: cluster-issuer.yaml
manifests/codegen/: model-loader.yaml  model-nfs-server.yaml  model-triton.yaml
manifests/fauxpilot/: README.md  model-gateway.yaml  model-loader.yaml  model-nfs-server.yaml  model-persistense-volumes.yaml  model-triton.yaml
model-loader/: Dockerfile  load-model.sh
scripts/: bootstrap.py  build-tree-sitter-lib.py  index_docs_as_sqlite.py  install-tree-sitter-deps  run.sh  troubleshoot_selfhosted_installation.py
tests/: test_app.py  test_config.py  test_structured_log.py
triton/: Dockerfile
(+624 files in other folders)
