[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai_gateway"
version = "0.1.0"
description = "Code generation provided by GitLab.com"
authors = ["GitLab AI Assisted"]
readme = "README.md"
packages = [{ include = "ai_gateway" }]

[tool.poetry.dependencies]
python = "~3.11.0"
fastapi = "^0.115.2"
dependency-injector = "^4.41.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
requests = "^2.28.1"
numpy = "^1.24.1"
python-dotenv = "^1.0.0"
fastapi-health = "^0.4.0"
google-cloud-aiplatform = "^1.36.4"
structlog = "^24.0.0"
asgi-correlation-id = "^4.1.0"
prometheus-fastapi-instrumentator = "^7.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
starlette-context = "^0.3.6"
google-cloud-profiler = "^4.0.0"
py-grpc-prometheus = "^0.8.0"
tree-sitter = "^0.21.0"
transformers = "^4.37.2"
snowplow-tracker = "^1.0.1"
anthropic = "^0.40.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
starlette = "^0.41.0"
httpx = "^0.27.0"
prometheus-client = "^0.21.0"
tree-sitter-languages = "^1.10.2"
jinja2 = "^3.1.3"
pyyaml = "^6.0.1"
google-cloud-discoveryengine = "^0.13.0"
litellm = "^1.35.20"
langchain = "^0.3.0"
langchain-anthropic = "^0.3.0"
langchain-community = "^0.3.0"
boto3 = "^1.35.37"
gitlab-cloud-connector = { version = "^1.5.0", source = "gitlab_cloud_connector" }
sse-starlette = "^2.1.3"
q_developer_boto3 = {path = "./vendor/q_developer_boto3-1.2.0-py3-none-any.whl"}

[[tool.poetry.source]]
name = "gitlab_cloud_connector"
url = "https://gitlab.com/api/v4/projects/58733651/packages/pypi/simple"
priority = "supplemental"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
responses = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
pylint = "^3.0.3"
astroid = "^3.0.2"
pytest-watcher = "^0.4.2"
pytest-randomly = "^3.15.0"
pyfakefs = "^5.6.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
isort = "^5.12.0"
black = "^24.0.0"
pylint = "^3.0.3"
astroid = "^3.0.2"
mypy = "^1.9.0"
types-pyyaml = "^6.0.12.20240311"
types-protobuf = "^4.25.0.20240417"
types-requests = "^2.31.0.20240406"

[tool.pytest.ini_options]
addopts = "--disable-warnings"
testpaths = ["tests"]
filterwarnings = ["error::UserWarning"]
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.scripts]
ai_gateway = "ai_gateway.main:run_app"
index_docs = "ai_gateway.scripts.index_docs_as_sqlite:build_indexed_docs"
troubleshoot = "ai_gateway.scripts.troubleshoot_selfhosted_installation:troubleshoot"

[tool.isort]
profile = "black"

[tool.pylint.main]
jobs = 0
load-plugins = [
  "lints.unsafe_dependency_resolution",
  "lints.direct_environment_variable_reference",
]

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "line-too-long",
  "missing-class-docstring",
  "c-extension-no-member",
  "too-few-public-methods",
  "no-member",
  "fixme",
  "unused-argument",
  "protected-access",
  "too-many-arguments",
  "no-name-in-module",
  "too-many-locals",
  "import-error",
  "import-outside-toplevel",
  "too-many-function-args",
  "arguments-differ",
  "unspecified-encoding",
  "redefined-builtin",
  "arguments-renamed",
  "raise-missing-from",
  "too-many-ancestors",
  "abstract-method",
  "broad-exception-caught",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "too-many-statements",
  "redefined-outer-name",
  "duplicate-code",
]
enable = [
  "unsafe-dependency-resolution",
  "direct-environment-variable-reference",
]

[tool.pylint.reports]
score = "no"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
